<resources>
    <string name="app_name">Plante Water Plants</string>
    
    <!-- activity_main.xml -->
    <string name="main_title">Water today</string>
    <string name="main_subtitle">You have no plants to water today</string>
    <plurals name="main_subtitle">
        <item quantity="one">You have %1$d plant that needs some love</item>
        <item quantity="other">You have %1$d plants that need some love</item>
    </plurals>
    <string name="main_subtitle_zero">You don\'t have any plants to water today!</string>
    <string name="main_all_plants">All plants</string>
    <string name="main_no_plants_to_water">You don\'t have to water any plants today!</string>
    <string name="main_no_plants">You don\t have any plants yet</string>
    
    <!-- recycler_view_water_plants.xml -->
    <!-- recycler_view_all_plants.xml -->
    <string name="rv_water_plants_name">Plant Name</string>
    <string name="rv_water_plants_date">Date</string>
    
    <!-- fragment add edit -->
    <!-- activity_plant_details.xml -->
    <string name="add_plant_toolbar_title">Add New Plant</string>
    <string name="edit_plant_toolbar_title">Edit Plant</string>
    <string name="new_plant_name">Name</string>
    <string name="new_plant_name_hint">Pick a plant name</string>
    <string name="new_plant_species">Species</string>
    <string name="new_plant_species_hint">What is the plant species?</string>
    <string name="new_plant_choose_image">Pick Image</string>
    <string name="new_plant_text_water_date">Water on</string>
    <string name="new_plant_text_water_every">Water again after</string>
    <string name="new_plant_edit_hint_every">Repeat every …</string>
    <string name="new_plant_text_mist_date">Mist on</string>
    <string name="new_plant_text_mist_every">Mist again after</string>
    <string name="new_plant_save_toast">Cannot Save. Please fill in a plant name and species.</string>
    <string name="new_plant_days">days</string>
    
    <string name="detail_drag_handle">Drag Handle</string>
    <string name="detail_water_in">Water In</string>
    <string name="detail_mist_in">Mist In</string>
    <string name="detail_days">%d days</string>
    <string name="detail_every_days">every %d days</string>
    
    <string name="detail_in_zero_days">Today!</string>
    <plurals name="detail_water_in_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="detail_mist_in_days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <plurals name="detail_water_repeat">
        <item quantity="one">every %1$d day</item>
        <item quantity="other">every %1$d days</item>
    </plurals>
    <plurals name="detail_mist_repeat">
        <item quantity="one">every %1$d day</item>
        <item quantity="other">every %1$d days</item>
    </plurals>
    
    <!-- toolbar_menu_add_edit_plant.xml -->
    <string name="menu_action_save">Save</string>
    <string name="menu_action_delete">Delete</string>
    
    <!-- toolbar_menu_detail_plant.xml -->
    <string name="menu_action_edit">Edit</string>
    
    <!-- Plant Image Description -->
    <string name="plant_image_description">Plant Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        
        "Bold, graphic, intentional.\n\n"
        
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"
        
        "Motion provides meaning.\n\n"
        
        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
        
        "3D world.\n\n"
        
        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"
        
        "Light and shadow.\n\n"
        
        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
        
        "Resting elevation.\n\n"
        
        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"
        
        "Component elevations.\n\n"
        
        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
        
        "Responsive elevation and dynamic elevation offsets.\n\n"
        
        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"
        
        "Avoiding elevation interference.\n\n"
        
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
