<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint_layout_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/holo_green_dark">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/basic_margin"
            />

        <TextView
            android:id="@+id/main_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_subtitle"
            app:layout_constraintTop_toBottomOf="@id/main_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/basic_margin"
            />

        <!-- Set Horizontal with LayoutManager -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recycler_view_water_plants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/basic_margin"
            />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- PeekHeight programmatically set in MainActivity -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_constraint_layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:behavior_hideable="false"
                app:behavior_peekHeight="350dp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/main_text_all_plants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_all_plants"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/basic_margin"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/main_text_all_plants"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/basic_margin"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/basic_margin"
        app:srcCompat="@drawable/ic_add_black_24dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>